# omnimonster

./: .env.local.complete  .env.local.example  .env.swap-test  .eslintrc.js  .gitignore  README-CLI.md  README.md  VERIFICATION_REPORT.md  check-demo-balances.mjs  cli-swap.ts  debug-swap.js  demo-real-atomic-swap.ts  deploy-polygon-amoy.ts  deploy-sepolia.ts  deploy-setup.ts  ecosystem.config.js  generate-test-wallet.js  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick-test.sh  real-atomic-swap.ts  test-pool-liquidity.js  test-real-atomic-swap.ts  tsconfig.json  turbo.json
cli/: README.md  fusion-test.ts  package.json  tsconfig.json
contracts/cosmos/: Cargo.toml  package.json
contracts/cosmos/deployments/: cosmos-swap-sage-1.json
contracts/cosmos/scripts/: cosmos-deploy.sh
contracts/cosmos/src/: htlc.rs  integration_tests.rs  lib.rs
scripts/: README.md  check-db-swap.ts  check-env-contracts.ts  check-htlc-contracts.ts  check-htlc-events.ts  check-latest-swap.ts  check-pool-balance.ts  cleanup-broken-swaps.ts  compare-monad-htlcs.ts  complete-production-test.ts  cross-chain-swap.ts  debug-resolver-contract-call.ts  deploy-monad-simple.js  final-production-test.ts  final-test.ts  fresh-production-test.ts  fund-pool-wallet.ts  htlc-smoke.ts  manual-pool-claim.ts  monitor-resolver.ts  monster-to-omni-swap.ts  omni-to-monster-swap.ts  quick-test.ts  setup-demo-tokens.ts  setup-test-environment.ts  start-resolver-simple.ts  verify-and-fix-resolver.ts  verify-exact-htlc.ts  verify-htlc-state.ts
test/: cosmos-htlc.ts  integration-tests.ts
(+236 files in other folders)
