[package]
name = "swap-sage-cosmos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cosmwasm-std = "1.2.7"
cosmwasm-storage = "1.2.7"
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
schemars = "0.8.11"
serde = { version = "1.0.150", default-features = false, features = ["derive"] }
thiserror = "1.0.38"
sha2 = "0.10.2"

[dev-dependencies]
cosmwasm-vm = "1.2.7"
cw-multi-test = "0.16.5"

[features]
default = []
schema = ["cosmwasm-std/stargate"]